.archived/clusters/base/apps/downloadarr/sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  selector:
    matchLabels:
      app: sonarr
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: sonarr
      labels:
        app: sonarr
    spec:
      volumes:
        - name: config
          emptyDir: {}
        - name: library-series
          persistentVolumeClaim:
            claimName: library-series
      securityContext:
        runAsUser: 3002
        runAsGroup: 1215
      containers:
        - name: sonarr
          image: ghcr.io/onedr0p/sonarr:4.0.9.2244@sha256:2740c331757564877a344cdad41a9a092b36f0680f5f0133bcc971b0b2bd1f84
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8989
              name: http
          livenessProbe:
            httpGet:
              path: /ping
              port: http
          readinessProbe:
            httpGet:
              path: /ping
              port: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: library-series
              mountPath: /data/library/series
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  selector:
    app: sonarr
  ports:
    - name: sonarr
      protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-http
spec:
  parentRefs:
    - name: default
  hostnames:
    - sonarr.talos.kidibox.net
  rules:
    - backendRefs:
        - name: sonarr
          port: 80
